# bgp_extrapolator_pkg

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
bgp_extrapolator_pkg/: __init__.py  __main__.py  enums.py  extrapolator.py
bgp_extrapolator_pkg/tests/: conftest.py
bgp_extrapolator_pkg/tests/engine_tests/: test_engine.py
bgp_extrapolator_pkg/tests/engine_tests/engine_test_outputs/001/: engine_gt.yaml
bgp_extrapolator_pkg/tests/engine_tests/engine_test_outputs/002/: engine_gt.yaml
bgp_extrapolator_pkg/tests/engine_tests/engine_test_outputs/003/: engine_gt.yaml
bgp_extrapolator_pkg/tests/engine_tests/engine_test_outputs/004/: engine_gt.yaml
bgp_extrapolator_pkg/tests/engine_tests/engine_test_outputs/009/: engine_gt.yaml
bgp_extrapolator_pkg/tests/engine_tests/engine_test_outputs/010/: engine_gt.yaml
bgp_extrapolator_pkg/tests/engine_tests/engine_test_outputs/011/: engine_gt.yaml
bgp_extrapolator_pkg/tests/engine_tests/engine_test_outputs/012/: engine_gt.yaml
bgp_extrapolator_pkg/tests/engine_tests/engine_test_outputs/013/: engine_gt.yaml
bgp_extrapolator_pkg/tests/engine_tests/engine_test_outputs/014/: engine_gt.yaml
bgp_extrapolator_pkg/tests/engine_tests/engine_test_outputs/015/: engine_gt.yaml
bgp_extrapolator_pkg/tests/engine_tests/engine_test_outputs/016/: engine_gt.yaml
bgp_extrapolator_pkg/tests/engine_tests/engine_test_outputs/019/: engine_gt.yaml
bgp_extrapolator_pkg/tests/engine_tests/engine_test_outputs/020/: engine_gt.yaml
bgp_extrapolator_pkg/tests/engine_tests/engine_test_outputs/023/: engine_gt.yaml
bgp_extrapolator_pkg/tests/engine_tests/engine_test_outputs/024/: engine_gt.yaml
bgp_extrapolator_pkg/tests/engine_tests/engine_test_outputs/027/: engine_gt.yaml
bgp_extrapolator_pkg/tests/engine_tests/engine_test_outputs/028/: engine_gt.yaml
bgp_extrapolator_pkg/tests/extrapolator_tests/: test_extrapolator.py
