# setuptools.pypa.io/en/latest/userguide/declarative_config.html
[metadata]
name = bgp_extrapolator_pkg
author = Justin Furuness
author_email = jfuruness@gmail.com
description = Wrapper around Sam's repository (listed in credits) as well as additional functionality such as a test suite and verification
version = 0.0.0
url = https://github.com/jfuruness/bgp_extrapolator_pkg

keywords =
    BGP
    Caida
    Peers
    Providers
    Relationships
    AS-Serial
    Customers
    Simulation
    ROV

classifiers =
    Programming Language :: Python :: 3
    Environment :: Console
    License :: OSI Approved :: BSD License
    Intended Audience :: Developers

license = BSD
license_files = LICENSE

long_description = README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
packages = find:
# Mypy won't work if this is True
zip_safe = False
# Include extras in Manfest.in
include_package_data = True
install_requires =
    cmake

description-file = README.md

[options.entry_points]
console_scripts =
    bgp_extrapolator_pkg = bgp_extrapolator_pkg.__main__:main

# https://stackoverflow.com/a/30539963/8903959
[options.extras_require]
# https for github actions and github no longer supports pip + git installs
test =
    types-requests
    types-PyYAML
    pytest-cov
    mypy
    flake8
    tox
    pytest-xdist

[options.package_data]
bgp_extrapolator_pkg = py.typed

[flake8]
max-line-length = 79

[coverage:run]
branch = True
omit =
    *tests*
    *__init__*

[coverage:report]

show_missing = True

exclude_lines =
    # Excludes lines overrides pragma: no cover, so add it back
    pragma: no cover

    # Code below this is not meant to be tested
    raise NotImplementedError

    # Code that isn't meant to be run
    if __name__ == .__main__.:
